<resources>
    <string name="app_name">Wallpapers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_4k_full_wallpapers">4K Full Wallpapers</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="menu_home">Home</string>
    <string name="home_popular">Popular</string>
    <string name="menu_random">Random</string>
    <string name="menu_liked">Liked</string>
    <string name="menu_history">History</string>
    <string name="menu_about">About</string>
    <string name="author">Copyright © 2022 Shohrux Ravshanbekov</string>
    <string name="all">ALL</string>
    <string name="neww">NEW</string>
    <string name="animals">ANIMALS</string>
    <string name="technology">TECHNOLOGY</string>
    <string name="nature">NATURE</string>
    <string name="home">Home</string>
</resources>