<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#011627"
    tools:context=".fragments.HeaderFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/drawer_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/inter"
        android:maxEms="5"
        android:text="@string/_4k_full_wallpapers"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintLeft_toRightOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <ImageView
            android:id="@+id/menu_home_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_home" />


        <TextView
            android:id="@+id/menu_home_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/inter"
            android:text="@string/menu_home"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <ImageView
            android:id="@+id/menu_popular_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_popular" />


        <TextView
            android:id="@+id/menu_popular_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/inter"
            android:text="@string/home_popular"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2">

        <ImageView
            android:id="@+id/menu_random_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_random" />


        <TextView
            android:id="@+id/menu_random_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/inter"
            android:text="@string/menu_random"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3">

        <ImageView
            android:id="@+id/menu_liked_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_liked" />


        <TextView
            android:id="@+id/menu_liked_text"
            android:layout_width="wrap_content"
            android:layout_height="20sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/inter"
            android:text="@string/menu_liked"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line4">

        <ImageView
            android:id="@+id/menu_history_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_history" />


        <TextView
            android:id="@+id/menu_history_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/inter"
            android:text="@string/menu_history"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line5">

        <ImageView
            android:id="@+id/menu_about_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_menu_about" />


        <TextView
            android:id="@+id/menu_about_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/inter"
            android:text="@string/menu_about"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/inter"
        android:text="@string/author"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line6" />


</androidx.constraintlayout.widget.ConstraintLayout>